# DataCatalogue

./: Makefile  README.md  pyproject.toml
.github/workflows/: full_test.yml
notebooks/: 01_basic_conversion.ipynb  01_debug_mike.ipynb  02_plotting.ipynb  foo.dfsu
src/zarrcatalogue/: __init__.py  catalog.py  plotting.py  utils.py
src/zarrcatalogue/converters/: base.py  mike.py
tests/: test_catalog.py  test_conversion.py  test_main.py
