[project]
name = "datacatalogue"
version = "0.1.0"
description = "A Python package for converting and managing model results (e.g. flexible mesh from MIKE) using Zarr storage format."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mikeio>=2.4.0",
    "zarr>=3.0.6",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pytest>=8.3.5",
]

# pytest use src layout
[tool.pytest.ini_options]
testpaths = [
    "tests",
]
python_paths = [
    "src",
]